--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,7 +54,7 @@ body {
 # About
 --------------------------------------------------------------*/
 .david {
-  box-shadow: -4px 17px 45px rgba(249, 166, 31, 0.07);
+  box-shadow: -0.25rem 1rem 2.8rem rgba(249, 166, 31, 0.07);
   padding: 5%;
   margin-top: 5%;
   width: 50%;
@@ -119,8 +119,8 @@ body {
 }
 
 [class^="label_"] {
-  width: 12px;
-  height: 12px;
+  width: 0.75rem;
+  height: 0.75rem;
   background: #fff;
   display: block;
   margin-top: 1.5rem;
@@ -153,7 +153,7 @@ body {
   width: 50%;
   float: left;
   padding: 5%;
-  border: 2px;
+  border: 0.125rem;
 }
 
 .resale {
@@ -199,16 +199,18 @@ body {
   padding-bottom: 5%;
   text-align: center;
   overflow: hidden;
+  padding-left: 0;
+  padding-right: 0;
 }
 
 #projects .wrapper {
   width: 100%;
-  padding-top: 20px;
+  padding-top: 1.25rem;
 }
 
 #projects .carousel {
   width: 100%;
-  margin: 0px auto;
+  margin: 0rem auto;
 }
 
 #projects .slick-slide img {
@@ -233,6 +235,11 @@ body {
 #projects .wrapper .slick-dots {
   background-color: white;
   padding: 3%;
+}
+
+.slick-prev,
+.slick-next {
+  display: none;
 }
 
 #projects .wrapper .slick-dots li button::before {
